--- a/papers/vyser/common/characteristic.tex
+++ b/papers/vyser/common/characteristic.tex
@@ -2,12 +2,17 @@
 {\actuality}
 Логическое программирование давно привлекает внимание исследователей тем, что оно предоставляет возможность не реализовывать конкретный алгоритм непосредственно, а вместо этого с некоторой степенью декларативности описывать условие решаемой задачи. Роль алгоритма в данном случае выполняет встроенная в систему логического программирования процедура поиска решения.
 
-Программа-запрос на логическом языке выражается в виде отношений (relations), а результат представляется в виде последовательности кортежей, возможно пустой.
-Каждый кортеж в последовательности ответов должен принадлежать запрошенному отношению. Таким образом, роль n-местных функций в логическом программировании играют (n+1)-местные отношения. Эти отношения можно использовать в прямую сторону, конкретизировав аргументы и подставив вместо результата свободную переменную, т.е. как функции. Также является возможным запускать их ``в обратную сторону'', конкретизировав результат и некоторые аргументы, по сути подбирая входные данные, на которых конкретный алгоритм, записанный на логическом языке программирования, выдаст ожидаемый результат.
+Программы на логическом языке записываются в виде реляций (relations), которые моделируют математические отношения (relations). 
+Математические отношения являются подмножествами декартова произведения, в то время как алгоритмические реляции моделируют математические отношения путём генерации элементов подмножества один за другим. Побочным эффектом использования реляций является возможность описания только счетных отношений, а также то, что реляция может зависнуть в процессе вычисления следующего элемента отношения.
+
+Запустить на вычисление логическую программу можно с помощью \emph{запросов}. Запросы осуществляются путём указания конкретной реляции, которая будет вычисляться, и указания аргументов этой реляции с разной степенью конкретности. Разрешается указать аргумент полностью конкретным (ground); не конкретизировать аргумент никак, подставив вместо него свободную переменную; или же совместить эти два способа, конкретизировав известные части аргумента, и подставив свободные переменные в пока неизвестных частях аргумента. В результате своей работы система логического программирования выдает такие подстановки свободных переменных, которые после применения подстановок к указанным аргументам дадут элемент отношения.
+
+Программистские n-местные функции в логическом программировании 
+превращаются в (n+1)-местные реляции, путём добавления дополнительного аргумента для результата функции. Эти реляции можно использовать в прямую сторону, конкретизировав аргументы и подставив вместо результата свободную переменную, т.е. как функции. Также является возможным запускать их ``в обратную сторону'', конкретизировав результат и некоторые аргументы, по сути подбирая входные данные, на которых конкретный алгоритм, записанный на логическом языке программирования, выдаст ожидаемый результат. Таким образом, если перед программистом на обычном языке программирования стоит задача обращения некоторого алгоритма, то он вынужден написать новый алгоритм, который непосредственно этим и занимается. Если же пользоваться логическим программированием, то можно попробовать обойтись одной реляцией, правильно подобрав её аргументы.
 
 Обладание свойством декларативности полезно для логических программ. Оно заключается в том, что программист не реализует непосредственно алгоритм как последовательность действий, от него требуется только корректное описание задачи на языке логического программирование. В декларативных описаниях программ результат не зависит от того как именно и в каком порядке описывается предметная область. Это снимает некоторый груз ответственности с программиста. 
 
-Исторически исследование логического программирования началось с изучения языка Prolog, который использует внутри себя  алгоритм поиска в глубину. Этот алгоритм, если находит ответ, показывает хорошую производительность. Однако он обладает свойством неполноты: алгоритм может бесконечно искать ответ в некоторой ветви дерева поиска решения и в итоге не зайти в другие ветви, где решение находится быстрее. Таким образом программы не Prolog не являются декларативными в общем случае.
+Исторически исследование логического программирования началось с изучения языка Prolog, который использует внутри себя  алгоритм поиска в глубину (deep-first search). Этот алгоритм, если находит ответ, показывает хорошую производительность. Однако он обладает свойством неполноты: алгоритм может бесконечно искать ответ в некоторой ветви дерева поиска решения и в итоге не зайти в другие ветви, где решение находится быстрее. Таким образом программы не Prolog не являются декларативными в общем случае.
 
 Противоположный подход к поиску решения --- поиск в ширину --- является алгоритмом полного поиска, но работает недостаточно быстро, и поэтому почти не используется.
 
@@ -31,9 +36,14 @@
 
 \paragraph{} Таким образом, для развития реляционного программирования в строго типизированных языках необходимо улучшать реализации miniKanren путём поддержки использования большего количества типов. 
 
-\paragraph{} Возможность запуска реляционных запросов в различных направлениях и большая декларативность относительно Prolog являются привлекательными причинами для использования miniKanren в задачах, где достаточно просто описать проблему и довольно сложно написать эффективный алгоритм поиска решения. Является интересным изучить возможности реляционного программирования для применения в компиляторах функциональных языков\footnote{что-то мотивация страдает}.
+\paragraph{} Возможность запуска реляционных запросов в различных направлениях и большая декларативность относительно Prolog являются привлекательными причинами для использования miniKanren в задачах, где достаточно просто описать проблему и довольно сложно написать эффективный алгоритм поиска решения. Такие задачи встречаются, например, при написании компиляторов. Известен метод выделения регистров с помощью решения пазлов, который требует выполнения поиска с возвратами. Также задача компиляции конструкции сопоставления с образцом  (в функциональных языках программирования) в эффективный код требует построение диаграмм решений, а это построение также требует совершения поиска с возвратами. Таким образцом, является интересным изучить возможности реляционного программирования для применения в компиляторах функциональных языков.
 
 {\progress}
+Работы по эффективной компиляции конструкции сопоставления с образцом в компиляторах функциональных языков ведутся с 1990х годов. Сейчас в компиляторе OCaml используется подход, предложенный в 2001 году исследователями F.Lefessant и L. Maranget. В 2008 году L.Maranget предложил компилировать конструкцию сопоставления с образцом в эффективные деревья решений. В работе была введена эвристика для осуществления компиляции, которая показывает значительные улучшения на подобранных примерах, но в среднем не дает существенного прироста производительности.
+
+В 2008 году исследователь F.M.Q. Pereira предложил использовать для выделения регистров решение пазлов. Предложенный алгоритм позволяет получать сравнимый по эффективности код, но является существенно более простым, чем аналоги.
+
+Основополагающей работой по реляционному программированию является диссертация исследователя Will Byrd 2009 года. В ней представляется язык реляционного программирования miniKanren как встраиваемый в Scheme предметно-ориентированный язык.
 %С 1990-х годов велась работа по
 %разработке семантики многопоточности с учетом слабых сценариев поведения.
 %Формальные модели для наиболее распространенных процессорных архитектур (x86, Power, ARM)
@@ -81,7 +91,7 @@
 Для~достижения поставленной цели были сформулированы следующие {\tasks}.
 \begin{enumerate}
   %% \item Провести обзор существующих операционных моделей слабой памяти.
-  \item Разработать и реализовать предментно-ориентированный язык семейства miniKanren для встраивания в OCaml.
+  \item Разработать и реализовать предметно-ориентированный язык семейства miniKanren, встраиваемый в функциональный язык общего назначения  OCaml. Также позаботиться об удобстве использования OCanren конечным пользователем.
   %% \item Формализовать модель памяти ARMv8 и доказать дополнительные свойства о ней, необходимые для
   %%       доказательства корректности компиляции. 
   %% \item Разработать метод для доказательства корректности компиляции из обещающей модели в модели памяти
@@ -92,13 +102,15 @@
   \item Проверить успешность реляционного программирования для написания частей компилятора функционального языка.
 \end{enumerate}
 
-Постановка цели и задач исследования соответствует следующим пунктам паспорта специальности 05.13.11:
-модели, методы и алгоритмы проектирования и анализа программ и программных систем, их эквивалентных преобразований, верификации и тестирования (пункт 1);
-языки программирования и системы программирования, семантика программ (пункт 2);
-модели и методы создания программ и программных систем для параллельной и распределенной обработки данных,
-языки и инструментальные средства параллельного программирования (пункт 8).
+Постановка цели и задач исследования соответствует 
+следующим пунктам паспорта специальности 05.13.11: ...
+%модели, методы и алгоритмы проектирования и анализа программ и программных систем, их эквивалентных преобразований, верификации и тестирования (пункт 1);
+%языки программирования и системы программирования, семантика программ (пункт 2);
+%модели и методы создания программ и программных систем для параллельной и распределенной обработки данных,
+%языки и инструментальные средства параллельного программирования (пункт 8).
 
 {\methods}
+Пока не придумал
 %Методология исследования базируется на подходах информатики
 %к описанию и анализу формальных семантик языков программирования.
 %% Также используется концепция симуляции систем переходов.
@@ -167,6 +179,33 @@
   %% Кроме того, представленный подход может быть использован и для доказательства
   %% корректности компиляции в модели x86 и Power, а значит обладает большой областью применимости.
 \end{enumerate}
+
+{\underline{\textbf{Evaluation}}}
+Динамические языки программирования (например, Scheme) помогают заниматься быстрым прототипированием, в то время как строгие статические языки программирования (например, OCaml) требуют дополнительных затрат на изначальное проектирование типов.
+
+\emph{В: Почему для реализации был выбран язык OCaml и можно ли переиспользовать наработки OCanren в функциональных языках со строгой статической типизацией?}
+Языки реляционного программирования состоят из двух основных частей: метода проведения поиска (interleaving search) и процедуры унификации.
+Языки из семейства Lisp, на которых реализован официальный miniKanren известны наличием универсального представления данных, которое заключается в синтаксисе, основанном на списках. Для универсального представления исследователям Will Byrd и другим удалось реализовать 
+\emph{единую} алгоритм унификации, который применим для всех данных, используемых в реляционном домене. В языке OCaml нет универсального представления на уровне синтаксиса, но присутствует универсально представление данных в памяти в среде выполнения языка OCaml. В OCanren также была реализована единый алгоритм полиморфной унификации, который работает для всех типов данных, используемых в OCanren. Если в новом языке программирования, куда необходимо встроить miniKanren, используется универсальное представление, то туда можно легко перенести идею унификации из официального miniKanren или OCanren. Если же нет, то унификацию придется реализовывать ad-hoc способом для каждого типа данных. Вторая часть miniKanren, а именно поиск,  не вызовет трудностей по переносу в язык, где поддерживаются функции высшего порядка.
+
+\emph{В: Что отличает OCanren от других реализацией miniKanren на OCaml и других строго типизированных языках?} Как было сказано выше, OCanren использует универсальный алгоритм полиморфной унификации. Хотя унификация реализована с использованием типонебезопасных возможностей языка OCaml, её интерфейс спроектирован так, чтобы туда можно было передавать только согласованные по типам данные. Без полиморфной унификации перед разработчиками стоят два возможных варианта действий. Либо они могут реализовывать ad-hoc унификацию для каждого используемого типа данных, что требует усилий от пользователя реляционного предметно-ориентированного языка, а также может вызвать серьёзные проблемы с обеспечением типобезопасности. Либо они могут поддержать в предметно-ориентированном языке только наперед заданное конечное количество используемых типов, реализовать унификацию для них и заставлять пользователя реляционного языка конвертировать свои типы данных туда и обратно. Это может оказаться неудобно для пользователя и требовать дополнительных расходов. На момент написания статьи 2016 года все известные реализации miniKanren на строго типизированных языках пользовались вторым подходом.
+
+
+Иногда, при реализации чего-либо с использованием типов данных приходится платить высокую цену абстракции из-за использования нетривиальных типов.
+
+\emph{В: На сколько производителен OCanren по сравнению с официальной реализацией miniKanren и на сколько большую цену абстракции пришлось заплатить?}
+Действительно, самая первая реализация OCanren платила высокую цену абстракции: древовидное представление данных по сравнению с официальной реализацией содержало в два раза большее количество узлов и поэтому унификация работала существенно медленнее. Из-за этого был разработан другой механизм типобезопасного встраивания, который не страдает этой проблемой. Текущая версия OCanren показывает сходную производительность по сравнению с самой быстрой реализацией miniKanren на Chez Scheme -- faster-miniKanren. Конкретные замеры и тесты есть в статье с ML Workshop 2016.
+
+\emph{В: На сколько осложнилось написание реляционных программ с помощью OCanren по сравнению с официальным miniKanren?}
+Действительно, подготовка типов данных для использования в реляционном домене требует некоторых усилий. Однако, подготовка типов и функций-конструкторов значений является однотипной для всех используемых типов, поэтому в рамках работы на пунктом 1 были спроектированы и реализованы синтаксические расширения для уменьшения количества шаблонного кода, который требуется писать программисту.
+
+Для использования типов данных в реляционном домене от них требуется наличие функториального действия для доказательства корректности возможности трансляции в логический домен, а также функции конвертации в строковое представление для удобства работы с данными типами. В OCanren обе функции создаются с помощью библиотеки обобщенного программирования Generic Transformers, которая генерирует некоторый код по типам данных. Основной её особенностью является то, что программист имеет удобный способ видоизменять некоторые части сгенерированных функций по своему усмотрению. Наиболее похожим на Generic Transformers решением является библиотека исследователя F.Pottier 2017 года, но её использование для типов, используемых вместе с OCanren невозможно: сгенерированный код не проходит проверку типов. Это является фундаментальной проблемой для работы F.Pottier, поэтому в Generic Transformers были приняты противоположные дизайн-решения, которые позволяют обойти возникающие проблемы.
+
+\emph{В: Какие улучшения может привнести реляционное программирование для задачи выделения регистров? (планируется)}
+Скорее всего более удобный способ описать алгоритм, мы этим вплотную пока не занимались.
+
+\emph{В: Какие улучшения и недостатки может привнести реляционное программирование для задачи компиляции конструкции сопоставления с образцом? (планируется)}
+
 
 {\influence}
 %Диссертационное исследование предлагает новый
