--- a/papers/vyser/common/characteristic.tex
+++ b/papers/vyser/common/characteristic.tex
@@ -30,13 +30,15 @@
 
 На данный момент сочетанием этих двух свойств обладают только языки семейства miniKanren. В своей Ph.D. диссертации Will Bird вводит термин \emph{реляционное программирование}, приравнивая его к программированию на miniKanren.
 
-За счет использования полного поиска miniKanren обладает свойством декларативности в большей степени, чем Prolog, что позволяет содержательно использовать miniKanren для запуска реляционных запросов в обратную сторону. В 2012 году исследователи Will Byrd, Eric Hold и Daniel Fridman применили miniKanren для написания \emph{реляционного интерпретатора} (интерпретатора некоторого подмножества Scheme на miniKanren) и воспользовались декларативностью и запускаемостью интерпретатора в обратном направлении для синтеза квайнов (quines) для подмножества Scheme.
+За счет использования полного поиска miniKanren обладает свойством декларативности в большей степени, чем Prolog, что позволяет содержательно использовать miniKanren для запуска реляционных запросов в обратную сторону. В 2012 году исследователи W. Byrd, E. Hold и D. Fridman применили miniKanren для написания \emph{реляционного интерпретатора} (интерпретатора некоторого подмножества Scheme на miniKanren) и воспользовались декларативностью и запускаемостью интерпретатора в обратном направлении для синтеза квайнов (quines) для подмножества Scheme.
 
 Реализация miniKanren на строго типизированных языках сопряжена с некоторыми проблемами, так как непосредственное переписывание кода, спроектированного для динамического языка программирования, на строго типизированный языке ведет к ошибкам типизации. Обычно, реализации miniKanren на строго типизированных языках предоставляют для использования встроенный язык программирования с поддержкой некоторого \emph{конечного и заготовленного заранее} набора типов данных. Другими словами программист не может использовать свои типы данных при написании реляционных запросов и вынужден преобразовывать свои данные в реляционный домен.
+%\paragraph{} 
 
-\paragraph{} Таким образом, для развития реляционного программирования в строго типизированных языках необходимо улучшать реализации miniKanren путём поддержки использования большего количества типов. 
+Таким образом, для развития реляционного программирования в строго типизированных языках необходимо улучшать реализации miniKanren путём поддержки использования большего количества типов. 
 
-\paragraph{} Возможность запуска реляционных запросов в различных направлениях и большая декларативность относительно Prolog являются привлекательными причинами для использования miniKanren в задачах, где достаточно просто описать проблему и довольно сложно написать эффективный алгоритм поиска решения. Такие задачи встречаются, например, при написании компиляторов. Известен метод выделения регистров с помощью решения пазлов, который требует выполнения поиска с возвратами. Также задача компиляции конструкции сопоставления с образцом  (в функциональных языках программирования) в эффективный код требует построение диаграмм решений, а это построение также требует совершения поиска с возвратами. Таким образцом, является интересным изучить возможности реляционного программирования для применения в компиляторах функциональных языков.
+Возможность запуска реляционных запросов в различных направлениях и большая декларативность относительно Prolog являются привлекательными причинами для использования miniKanren в задачах, где достаточно просто описать проблему и довольно сложно написать эффективный алгоритм поиска решения. Такие задачи встречаются, например, при написании компиляторов. Известен метод выделения регистров с помощью решения пазлов, который требует выполнения поиска с возвратами. Также задача компиляции конструкции сопоставления с образцом  (в функциональных языках программирования) в эффективный код требует построение диаграмм решений, а это построение также требует совершения поиска с возвратами. Таким образцом, является интересным изучить возможности реляционного программирования для применения в компиляторах функциональных языков.
+\footnote{Возможно, в актуальности стоит ещё сказать про обобщенное программирование в стиле GT и упомянуть F.Pottier в степени разработанности темы, но я пока не понял как.}
 
 {\progress}
 Работы по эффективной компиляции конструкции сопоставления с образцом в компиляторах функциональных языков ведутся с 1990х годов. Сейчас в компиляторе OCaml используется подход, предложенный в 2001 году исследователями F.Lefessant и L. Maranget. В 2008 году L.Maranget предложил компилировать конструкцию сопоставления с образцом в эффективные деревья решений. В работе была введена эвристика для осуществления компиляции, которая показывает значительные улучшения на подобранных примерах, но в среднем не дает существенного прироста производительности.
@@ -201,11 +203,29 @@
 
 Для использования типов данных в реляционном домене от них требуется наличие функториального действия для доказательства корректности возможности трансляции в логический домен, а также функции конвертации в строковое представление для удобства работы с данными типами. В OCanren обе функции создаются с помощью библиотеки обобщенного программирования Generic Transformers, которая генерирует некоторый код по типам данных. Основной её особенностью является то, что программист имеет удобный способ видоизменять некоторые части сгенерированных функций по своему усмотрению. Наиболее похожим на Generic Transformers решением является библиотека исследователя F.Pottier 2017 года, но её использование для типов, используемых вместе с OCanren невозможно: сгенерированный код не проходит проверку типов. Это является фундаментальной проблемой для работы F.Pottier, поэтому в Generic Transformers были приняты противоположные дизайн-решения, которые позволяют обойти возникающие проблемы.
 
+\emph{В: Как может облегчиться написание реляционных программ с помощью OCanren по сравнению с оригинальным miniKanren?}
+В работе 2012 года исследователи W. Byrd, E. Hold и D. Fridman для %корректной работы
+ реляционного интерпретатора вводили дополнительные синтаксические конструкции в miniKanren, чтобы гарантировать корректность получаемых результатов. В их реализации синтаксические конструкции интерпретируемого языка смешиваются с данными miniKanren и поэтому возникает необходимость проверять, что некоторые символы языка Scheme не встречаются в подвыражениях. При переписывании символьного интерпретатора на строго статически типизированный OCanren были спроектировны типы данных таким образом, что некорректные данные построить невозможно, т.е. проверку на корректность начала выполнять система типов языка OCaml. Таким образом, с использованием OCanren удалось сократить количество примитивов miniKanren, которые требуются для создания реляционного интерпретатора с семи до пяти, выкинув \texttt{absento} и \texttt{numero}.
+
+\emph{В: Какие улучшения и недостатки может привнести реляционное программирование для задачи компиляции конструкции сопоставления с образцом? (планируется)}
+В контексте сопоставления с образцом компилятор выполняет две задач: проверки образцов на полноту и непосредственно компиляцию во внутреннее представление. Задача компиляции в максимально эффективный код является сложной. В работе 2008 год исследователь K.Maranget предложил использовать для этого построение диаграмм решений на основе некоторой эвристики.  Построение же оптимальной диаграммы решений является NP-трудной задачей из-за необходимости произведения поиска с возвратами. В реляционном программировании поиск с возвратами встроен изначально, и поэтому является  естественным применить реляционное программирование для генерации кода сопоставления с образцом.
+
+Задача проверки на полноту обычно в компиляторах решается написанием отдельного алгоритма. Эта задача заключается в проверке того, что для любого сопоставляемого выражения (scrutinee) исполнение продолжится под одной из веток сопоставления с образцом, т.е. не случится исключительной ситуации, когда ни одна ветвь сопоставления с образцом не подходит для данного разбираемого выражения. Используя реляционное программирование, мы сможем переиспользовать реляцию для порождения промежуточного представления, запустив её в обратную сторону: зафиксировав результат и подобрав выражения, на которых ни один из образцов не подойдет.
+
+Использование реляционного программирования может облегчить поддержку и последующее расширение алгоритмов, связанных с компиляцией сопоставления с образцом. Любопытным является попытка поддержать различные расширения сопоставления с образцом и оценить усилия, которые требуются для добавления расширений в классическом и реляционном случае. Например, можно добавить в сопоставление с образцом поддержку целочисленных интервалов. На данный момент в компиляторе OCaml это не поддерживается\footnote{\href{https://github.com/ocaml/ocaml/issues/8504}{\texttt{https://github.com/ocaml/ocaml/issues/8504} багтрекер}} по причине того, что в текущую реализацию компилятор это сложно добавить, не увеличив существенным образом размер генерируемого кода. Однако, при использовании реляционного программирования эта проблема видится тривиальной.
+
 \emph{В: Какие улучшения может привнести реляционное программирование для задачи выделения регистров? (планируется)}
 Скорее всего более удобный способ описать алгоритм, мы этим вплотную пока не занимались.
 
-\emph{В: Какие улучшения и недостатки может привнести реляционное программирование для задачи компиляции конструкции сопоставления с образцом? (планируется)}
-
+{\underline{\textbf{Что надо сделать, чтобы считать диссер законченным?}}}
+\begin{itemize}
+\item Статья про сопоставление с образцом
+\begin{itemize}
+\item Проверка на полноту с запуском в обратную сторону
+\item  Поддержка расширений для демонстрации лаконичности реляционного программирования: числовые интервалы, охранные выражения, может быть полиморфные вариантные типы
+\end{itemize}
+\item Статья про генерацию кода с выделением регистров.
+\end{itemize}
 
 {\influence}
 %Диссертационное исследование предлагает новый
