--- a/papers/vyser/common/characteristic.tex
+++ b/papers/vyser/common/characteristic.tex
@@ -10,15 +10,19 @@
 Программистские n-местные функции в логическом программировании 
 превращаются в (n+1)-местные реляции, путём добавления дополнительного аргумента для результата функции. Эти реляции можно использовать в прямую сторону, конкретизировав аргументы и подставив вместо результата свободную переменную, т.е. как функции. Также является возможным запускать их ``в обратную сторону'', конкретизировав результат и некоторые аргументы, по сути подбирая входные данные, на которых конкретный алгоритм, записанный на логическом языке программирования, выдаст ожидаемый результат. Таким образом, если перед программистом на обычном языке программирования стоит задача обращения некоторого алгоритма, то он вынужден написать новый алгоритм, который непосредственно этим и занимается. Если же пользоваться логическим программированием, то можно попробовать обойтись одной реляцией, правильно подобрав её аргументы.
 
-Обладание свойством декларативности полезно для логических программ. Оно заключается в том, что программист не реализует непосредственно алгоритм как последовательность действий, от него требуется только корректное описание задачи на языке логического программирование. В декларативных описаниях программ результат не зависит от того как именно и в каком порядке описывается предметная область. Это снимает некоторый груз ответственности с программиста. 
+Обладание свойством декларативности полезно для логических программ. Оно заключается в том, что программист не реализует непосредственно алгоритм как последовательность действий, от него требуется только корректное описание задачи на языке логического программирование. В декларативных описаниях программ результат не зависит от того как именно и в каком порядке описывается предметная область. Это снимает некоторый груз ответственности с программиста.
 
-Исторически исследование логического программирования началось с изучения языка Prolog, который использует внутри себя  алгоритм поиска в глубину (deep-first search). Этот алгоритм, если находит ответ, показывает хорошую производительность. Однако он обладает свойством неполноты: алгоритм может бесконечно искать ответ в некоторой ветви дерева поиска решения и в итоге не зайти в другие ветви, где решение находится быстрее. Таким образом программы не Prolog не являются декларативными в общем случае.
+Процедура поиска, встроенная в систему логического программирования может осуществлять поиск решения руководствуюсь различными стратегиями. Самым распространенным является поиск в глубину, который, если находит ответ, показывает хорошую производительность. Однако он обладает свойством неполноты: алгоритм может бесконечно искать ответ в некоторой ветви дерева поиска решения и в итоге не зайти в другие ветви, где решение находится быстрее.
+ Таким образом логическое программирование, использующее поиск в глубину не является декларативным в общем случае. 
+ 
+Антагонистом поиска в глубину является стратегия поиска в ширину. Хотя поиск в ширину является стратегией полного поиска, она не показывает достаточную производительность на практике, и потому почти не используется. Также существуют стратегии сочетающие в себе поиск в глубину и в ширину: инкрементальное погружение (incremental deepening) и поиск с чередованием (interleaving search).
 
-Противоположный подход к поиску решения --- поиск в ширину --- является алгоритмом полного поиска, но работает недостаточно быстро, и поэтому почти не используется.
+Исторически исследование логического программирования началось с изучения языка Prolog, который использует алгоритм поиска в глубину (deep-first search) и поэтому является не декларативным в общем случае. 
+% Этот алгоритм, если находит ответ, показывает хорошую производительность. Однако он обладает свойством неполноты: алгоритм может бесконечно искать ответ в некоторой ветви дерева поиска решения и в итоге не зайти в другие ветви, где решение находится быстрее. Таким образом программы не Prolog не являются декларативными в общем случае.
 
-Недостаток неполноты поиска в литературе разрешается несколькими способами. Одним из вариантов является добавление Prolog дополнительных конструкций для управления поиском: отсечения (cuts), копирование термов (copyterm) и других. Но корректная расстановка программистом этих конструкций невозможна без обладания информацией о конкретности аргументов отношения. Более того, при различных запросах к логической программе изменяется степень конкретизации используемых данных, и поэтому правильная расстановка конструкций управления поиском невозможна, так как она существенно зависит от входных данных. Это нарушает свойство декларативности логических программ на языке Prolog.
+Недостаток неполноты поиска в литературе разрешается несколькими способами. Одним из вариантов является добавление Prolog дополнительных конструкций для управления поиском: отсечение (cut), копирование термов (copyterm) и других. Но корректная расстановка программистом этих конструкций невозможна без обладания информацией о конкретности аргументов отношения. Более того, при различных запросах к логической программе изменяется степень конкретизации используемых данных, и поэтому правильная расстановка конструкций управления поиском невозможна, так как она существенно зависит от входных данных. Таким образом, дополнительные конструкции не гарантируют свойство декларативности логических программ на языке Prolog.
 
-Другим способом борьбы с неполнотой поиска является подход, применяемый в языке Datalog. Этот язык наследует синтаксис и процедуру поиска из Prolog, но некоторые программы и сочетания синтаксических конструкций считаются некорректными. Ограничения выбраны таким образом, что пространство поиска запросов на Datalog является конечным, и, следовательно, поиск в глубину является полным поиском на таких программах. 
+Другим способом борьбы с неполнотой поиска является подход, применяемый в языке Datalog. Этот язык наследует синтаксис и процедуру поиска из Prolog, но некоторые программы и сочетания синтаксических конструкций считаются некорректными. Ограничения выбраны таким образом, что пространство поиска запросов на Datalog является конечным, и, следовательно, поиск в глубину является полным поиском на таких программах. Однако из-за введенных синтаксических ограничений не все программы языка Prolog можно переписать на Datalog.
 
 Язык Datalog нашел своё применения в различных предметных областях: компиляторы, запросы к базам данных, запросы к интернет-серверам и прочее\footnote{дописать подробнее со ссылками}.
 
