--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -152,6 +152,7 @@ link:02.pdf[Слайды про алгебру типов]
 [[week6]]
 Неделя 6 (10 октября)
 ---------------------
+https://kakadu.github.io/papers/pfds/pfds_talk.pdf[Про типы данных]
 
 [[week7]]
 Неделя 7 (17 октября)
@@ -215,32 +216,35 @@ link:mm-transformers-12.2019-noads.pdf[Траснформеры]
 
 
 [[questions]]
-Теоретические вопросы к экзамену 2018 (предыдущего) года
---------------------------------------------------------
+Теоретические вопросы к экзамену 2019 года (WIP)
+------------------------------------------------
 За мямленье в ответ на вопрос с ☦ будет больно.
 
-. Абстрактный спискок и сложность основных операций у него. Какие (минимум две) реализации абстрактных списков Вы знаете и что там со ложностью основных опeраций?
-. ☦ Алгебра типов. Простейшие типы из которых можно много чего построить.
-. Эквивалентность, равенство и изоморфизм. И для типов тоже.
-. Как из простейших типов построить что-то изоморфное данному алгебраическому типу?
-. ☦ Лямда-исчисление. Три правила перобразования лямбда-термов.
-. Стратегии вычисления лямбда-термов: call-by-name, call-by-value, call-by-need.
-  Почему одно лучше/хуже другого?
-. ☦ Унификация и подстановки. ☦ Capture avoiding substitution. Индексы де Брауна.
-. ☦ Функторы. ☦ Законы функторов.
-. ☦ Аппликативные функторы. Законы аппликативов.
+. Алгебраические типы и сопоставление с образцом. Что как называется, что писать можно, а что нельзя.
+. Классы типов. Мотивация.
+. ☦ Алгебра типов. Простейшие типы из которых можно много чего построить. Операции над типами. Получение зипперов по типу.
+. Эквивалентность, равенство и изоморфизм. И для типов тоже. Как из простейших типов построить что-то изоморфное данному алгебраическому типу?
+. Типы данных. Левоориентированные кучи
+. Типы данных. Биномиальные кучи
+. Типы данных. Красно-черные деревья
+. ☦ Лямбда-исчисление. Подстановки. Редукция. ☦ Capture avoiding substitution.
+. Стратегии вычисления лямбда-термов: applicative order, call-by-name, call-by-value, normal order.
+  Когда одно лучше/хуже другого?
+. Безымянные представления: индексы де Брёйна и SKI. Редукция в SKI
+. Лямбда исчисление как Тьюринг полный язык программирования. Числа и арифметика. Рекурсия.
+. ☦ Функторы. ☦ Законы функторов. Примеры стандартных функторов из Haskell и примеры из домашнего задания.
+. ☦ Аппликативные функторы. Законы аппликативов. Примеры из Haskell и домашнего задания.
 . ☦ Монады. ☦ Законы монад. ☦ Выражение функторов и аппликативов, если монада уже описана.
   ☦ Стандартные монады: Reader, Writer, ☦ State, ☦ List, ☦ Maybe, Cont, ☦ IO.
 . ☦ Do-нотация. ☦ Преобразование монадического кода из do-нотации и обратно.
 . Преобразования кода с list comprehension в do-нотацию и обратно.
 . Стандартные функции над списками. Будьте готовы написать двухстрочную функцию (map, drop, etc.) не отходя от кассы (или типа того).
-. Классы типов. Мотивация.
 . Free monad. Пример.
-. Фантомные типы. Пример.
-. Экзистенциальные типы. Почему такое название?
-. Type families. Мотивация.
-. ☦ Катаморфизм и анаморфизм. Пример.
-. Параморфизм. Хиломорфизм.
+. Фантомные типы. Мотивация. Пример.
+. GADT. Мотивация. Как получить обычный алгебраический тип из GADT, пользуясь  только одиним GADT `Eq a`?
+. ФП vs. Интуиционистская логика. Как по типу получить терм его населяющий.
+. Трансформеры. Мотивация и использование в домашнем задании (если есть).
+. Полиморфные типы. Вывод типов в системе ML. Унификация. Типизация Y-комбинатора.
 
 
 ifdef::backend-docbook[]
