--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -222,12 +222,14 @@ link:mm-transformers-12.2019-noads.pdf[Траснформеры]
 
 . Алгебраические типы и сопоставление с образцом. Что как называется, что писать можно, а что нельзя.
 . Классы типов. Мотивация.
-. ☦ Алгебра типов. Простейшие типы из которых можно много чего построить. Операции над типами. Получение зипперов по типу.
+. ☦ Алгебра типов. Простейшие типы из которых можно много чего построить. Операции над типами. Получение зипперов по типу (конкретные типы есть в слайдах).
 . Эквивалентность, равенство и изоморфизм. И для типов тоже. Как из простейших типов построить что-то изоморфное данному алгебраическому типу?
-. Типы данных. Левоориентированные кучи
-. Типы данных. Биномиальные кучи
-. Типы данных. Красно-черные деревья
+. Типы данных. Левоориентированные кучи.  Основные свойства инварианты. Сложность операций. Реализация.
+. Типы данных. Биномиальные кучи. Внутреннее устройство. Сравнение c левоориентированными.
+. Типы данных. Красно-черные деревья. Балансировка для чисто функциональный реализации. (Удаление не надо)
 . ☦ Лямбда-исчисление. Подстановки. Редукция. ☦ Capture avoiding substitution.
++
+Также требуется умение демонстрировать на бумажке/доске, что студент может провести редукцию в той или иной стратегии.
 . Стратегии вычисления лямбда-термов: applicative order, call-by-name, call-by-value, normal order.
   Когда одно лучше/хуже другого?
 . Безымянные представления: индексы де Брёйна и SKI. Редукция в SKI
@@ -235,17 +237,33 @@ link:mm-transformers-12.2019-noads.pdf[Траснформеры]
 . ☦ Функторы. ☦ Законы функторов. Примеры стандартных функторов из Haskell и примеры из домашнего задания.
 . ☦ Аппликативные функторы. Законы аппликативов. Примеры из Haskell и домашнего задания.
 . ☦ Монады. ☦ Законы монад. ☦ Выражение функторов и аппликативов, если монада уже описана.
-  ☦ Стандартные монады: Reader, Writer, ☦ State, ☦ List, ☦ Maybe, Cont, ☦ IO.
+  ☦ Стандартные монады: Reader, Writer, ☦ State, ☦ List, ☦ Maybe.
+. Понятие чистой функции. Чистые и нечистые функции в Haskell. Монада IO.
+. Continuation monad и  continuation passing style. Пример про `callCC`.
++
+Также требует от студенто показать умение переписывать код из домашки в continuation passing style.
 . ☦ Do-нотация. ☦ Преобразование монадического кода из do-нотации и обратно.
+. Парсер-комбинаторы и их связь с аппликативами и монадами.
++
+Требуется умение писать простые парсеры прямо в REPL, например:
++
+.. Парсер языка `aⁿbⁿcⁿ` --  язык из букв `a,b,c`, где они всегда идут подряд и встречаются одинаковое количество раз.
 . Преобразования кода с list comprehension в do-нотацию и обратно.
-. Стандартные функции над списками. Будьте готовы написать двухстрочную функцию (map, drop, etc.) не отходя от кассы (или типа того).
-. Free monad. Пример.
+. Стандартные функции над ленивыми списками.
++
+Будьте готовы написать простую функцию и запустить прямо в REPL. Например:
++
+.. Решето Эратосфена
+.. Функция `concat :: [[a]] -> [a]` такая, что если `∃ m<∞ ∃n<∞ ∃x: x = ((xs !! m) !! n)` то
+`∃ i<∞ (Just x = elemIndex i (concat xs))`.
+. Free monad. Пример. Сравнение монады для списка и результата специализации Free monad (вопрос из слайдов).
 . Фантомные типы. Мотивация. Пример.
 . GADT. Мотивация. Как получить обычный алгебраический тип из GADT, пользуясь  только одиним GADT `Eq a`?
-. ФП vs. Интуиционистская логика. Как по типу получить терм его населяющий.
-. Трансформеры. Мотивация и использование в домашнем задании (если есть).
+. ФП vs. Интуиционистская логика. Как по типу получить терм, его населяющий?
+. Трансформеры. Мотивация. Использование в домашнем задании (если есть).
 . Полиморфные типы. Вывод типов в системе ML. Унификация. Типизация Y-комбинатора.
 
+// Ещё про чистые функции и отличие от математических
 
 ifdef::backend-docbook[]
 [index]
