--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -264,6 +264,7 @@ link:mm-transformers-12.2019-noads.pdf[Траснформеры]
 . Полиморфные типы. Вывод типов в системе ML. Унификация. Типизация Y-комбинатора.
 
 // Ещё про чистые функции и отличие от математических
+// Правильно произносить слово "интуиционистская"
 
 ifdef::backend-docbook[]
 [index]
