--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -103,8 +103,8 @@ link:projects.html[Тут] есть список проектов которые
 
 * Сдать какой-нибудь онлайн-курс
 **  Для Haskell
-*** Cдать https://stepik.org/join-class/3a7513c770b80866b96e18baa03c3ce18e87303e[1ю часть курса] про ФП на степике
-*** Cдать https://stepik.org/join-class/a4741bd985027507643baf2b07221c264329b484[2ю часть курса] про ФП на степике
+*** Cдать https://stepik.org/join-class/3a7513c770b80866b96e18baa03c3ce18e87303e[1ю часть курса] про ФП на степике (с отличием)
+*** Cдать https://stepik.org/join-class/a4741bd985027507643baf2b07221c264329b484[2ю часть курса] про ФП на степике (просто сдать)
 ** Scala
 *** Курс на https://stepik.org/course/16243/syllabus[Степике]
 *** Накодить задачу на Scala 3 (sic!) (в более-менее функциональном стиле, за Scala как Java буду карать!). Три примера задач есть по link:hw.html[ссылке].
@@ -209,47 +209,43 @@ link:mm-transformers-12.2019-noads.pdf[Траснформеры]
 
 Последняя по расписанию пара link:08hm.pdf[про полиморфные типы]
 
-[[week16]]
-Неделя 16 (19 декабря)
-----------------------
-
-
-
 [[questions]]
-Теоретические вопросы к экзамену 2019 года (WIP)
-------------------------------------------------
-За мямленье в ответ на вопрос с ☦ будет больно.
+Теоретические вопросы к экзамену в январе 2020 года
+---------------------------------------------------
+За мямленье в ответ на вопрос с ☦ будет особенно больно.
 
-. Алгебраические типы и сопоставление с образцом. Что как называется, что писать можно, а что нельзя.
+. ☦ Алгебраические типы и сопоставление с образцом. Что как называется, что писать можно, а что нельзя.
 . Классы типов. Мотивация.
 . ☦ Алгебра типов. Простейшие типы из которых можно много чего построить. Операции над типами. Получение зипперов по типу (конкретные типы есть в слайдах).
-. Эквивалентность, равенство и изоморфизм. И для типов тоже. Как из простейших типов построить что-то изоморфное данному алгебраическому типу?
-. Типы данных. Левоориентированные кучи.  Основные свойства инварианты. Сложность операций. Реализация.
+. ☦ Эквивалентность, равенство и изоморфизм. И для типов тоже. Как из простейших типов построить что-то изоморфное данному алгебраическому типу?
+. Типы данных. Левоориентированные кучи. Основные свойства/инварианты. Сложность операций. Реализация.
 . Типы данных. Биномиальные кучи. Внутреннее устройство. Сравнение c левоориентированными.
-. Типы данных. Красно-черные деревья. Балансировка для чисто функциональный реализации. (Удаление не надо)
+. Типы данных. ☦ Красно-черные деревья. Балансировка для чисто функциональный реализации. (Удаление не надо)
 . ☦ Лямбда-исчисление. Подстановки. Редукция. ☦ Capture avoiding substitution.
 +
 Также требуется умение демонстрировать на бумажке/доске, что студент может провести редукцию в той или иной стратегии.
-. Стратегии вычисления лямбда-термов: applicative order, call-by-name, call-by-value, normal order.
+. Стратегии вычисления лямбда-термов: applicative order, ☦ call-by-name, ☦ call-by-value, normal order.
   Когда одно лучше/хуже другого?
 . Безымянные представления: индексы де Брёйна и SKI. Редукция в SKI
-. Лямбда исчисление как Тьюринг полный язык программирования. Числа и арифметика. Рекурсия.
-. ☦ Функторы. ☦ Законы функторов. Примеры стандартных функторов из Haskell и примеры из домашнего задания.
+. ☦ Лямбда исчисление как Тьюринг полный язык программирования. Числа и арифметика. ☦ Рекурсия.
+. ☦ Функторы. Законы функторов. Примеры стандартных функторов из Haskell и примеры из домашнего задания.
 . ☦ Аппликативные функторы. Законы аппликативов. Примеры из Haskell и домашнего задания.
 . ☦ Монады. ☦ Законы монад. ☦ Выражение функторов и аппликативов, если монада уже описана.
   ☦ Стандартные монады: Reader, Writer, ☦ State, ☦ List, ☦ Maybe.
-. Понятие чистой функции. Чистые и нечистые функции в Haskell. Монада IO.
-. Continuation monad и  continuation passing style. Пример про `callCC`.
 +
-Также требует от студенто показать умение переписывать код из домашки в continuation passing style.
-. ☦ Do-нотация. ☦ Преобразование монадического кода из do-нотации и обратно.
-. Парсер-комбинаторы и их связь с аппликативами и монадами.
+Где в домашнем задании их уместно применить?
+. ☦ Понятие чистой функции. Чистые и нечистые функции в Haskell. Монада IO.
+. Continuation monad и continuation passing style. Пример про `callCC`.
++
+Также требует от студента показать умение переписывать код из домашки в continuation passing style.
+. ☦ Do-нотация. Преобразование монадического кода из do-нотации и обратно.
+. ☦ Парсер-комбинаторы и их связь с аппликативами и монадами.
 +
 Требуется умение писать простые парсеры прямо в REPL, например:
 +
 .. Парсер языка `aⁿbⁿcⁿ` --  язык из букв `a,b,c`, где они всегда идут подряд и встречаются одинаковое количество раз.
 . Преобразования кода с list comprehension в do-нотацию и обратно.
-. Стандартные функции над ленивыми списками.
+. ☦ Стандартные функции над ленивыми списками.
 +
 Будьте готовы написать простую функцию и запустить прямо в REPL. Например:
 +
@@ -261,10 +257,21 @@ link:mm-transformers-12.2019-noads.pdf[Траснформеры]
 . GADT. Мотивация. Как получить обычный алгебраический тип из GADT, пользуясь  только одиним GADT `Eq a`?
 . ФП vs. Интуиционистская логика. Как по типу получить терм, его населяющий?
 . Трансформеры. Мотивация. Использование в домашнем задании (если есть).
-. Полиморфные типы. Вывод типов в системе ML. Унификация. Типизация Y-комбинатора.
+. Полиморфные типы. Вывод типов в системе типов Hindley-Milner'a. Унификация. Типизация Y-комбинатора.
++
+Следует ожидать допы про вывод типов для конкретных лямбда-выражений.
 
-// Ещё про чистые функции и отличие от математических
-// Правильно произносить слово "интуиционистская"
+
+Следует также ожидать ожидать вопросы на адекватность/неадекватность:
+
+. Какой предмет сдаете? Как зовут лектора?
+. Какую домашку делали и что было самое сложное?
+. Как читается вон то страшное слово из 3го с конца билета?
+. Как звали американского математика Карри?
+. Как в этом коде стоят скобочки?
+. и т.п.
+
+P.S. Не забудьте про степик.
 
 ifdef::backend-docbook[]
 [index]
