WIP on questions

--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -269,6 +269,7 @@ link:mm-transformers-12.2019-noads.pdf[Траснформеры]
 . Как читается вон то страшное слово из 3го с конца билета?
 . Как звали американского математика Карри?
 . Как в этом коде стоят скобочки?
+. А что это за код написан в домашке и Вы ли её делали?
 . и т.п.
 
 P.S. Не забудьте про степик.
