Update hw description about assembler

--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -301,10 +301,21 @@ TODO: В 2020м году сделать подзадачу про трансля
 === Assembler (Суханова)
 
 Выберите вид ассемблера, который хорошо работает на вашем компьютере/процессоре и почитайте
-виды регистров в данной архитектуре. Реализуйте интерпретатор. Преобразование программ из
-задания 4 будет про автоматическую векторизацию. Если по дороге окажется, что
-Вы научились генерировать настоящий ELF файл, который потом можно отдельно исполнить --
-вообще будет круто.
+виды регистров в данной архитектуре. Реализуйте интерпретатор. 
+
+Преобразование программ из задания 4 про автоматическую векторизацию.
+В архитектуре X86 есть векторные инструкции. Предлагается принять программу на 
+ассемблере и на выходе выплюнуть измененную программу на ассемблере, которая использует векторные инструкции и за счет этого выполняется быстрее (меньше сложений, умножения и прочих операций). При интерпретации просчитайте сколько инструкций пришлось выполнить в первом случае, а сколько во втором (за одно узнаете больше о монадах).
+В качестве примера векторных инструкций выберите парочку https://gist.github.com/detomon/fb9db687b154d67dbb50[отсюда] или https://software.intel.com/sites/landingpage/IntrinsicsGuide/#text=_mm_shuffle&expand=5143[отсюда], например про перестановку чисел в регистре (shuffle). 
+Можно доделать дополнительные регистры как в X86, а можно сделать всё поверх регистров общего назначения (AH,AX,EAX) -- это не принципиально.
+
+
+
+// Если по дороге окажется, что
+// Вы научились генерировать настоящий ELF файл, который потом можно отдельно исполнить --
+// вообще будет круто.
+
+
 
 [[datalog]]
 === Datalog (Логунов)
