--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -256,6 +256,7 @@ link:mm-transformers-12.2019-noads.pdf[Траснформеры]
 . Фантомные типы. Мотивация. Пример.
 . GADT. Мотивация. Как получить обычный алгебраический тип из GADT, пользуясь  только одиним GADT `Eq a`?
 . ФП vs. Интуиционистская логика. Как по типу получить терм, его населяющий?
+// Возможно это билет стоит не рассказывать на след. год.
 . Трансформеры. Мотивация. Использование в домашнем задании (если есть).
 . Полиморфные типы. Вывод типов в системе типов Hindley-Milner'a. Унификация. Типизация Y-комбинатора.
 +
@@ -265,6 +266,7 @@ link:mm-transformers-12.2019-noads.pdf[Траснформеры]
 Следует также ожидать ожидать вопросы на адекватность/неадекватность:
 
 . Какой предмет сдаете? Как зовут лектора?
+. Что такое функциональное программирование?
 . Какую домашку делали и что было самое сложное?
 . Как читается вон то страшное слово из 3го с конца билета?
 . Как звали американского математика Карри?
@@ -273,6 +275,12 @@ link:mm-transformers-12.2019-noads.pdf[Траснформеры]
 . и т.п.
 
 P.S. Не забудьте про степик.
+
+
+// Вопрос: data State s a = S (s -> (a,s)) От какого слова происходит сокращение s
+// Что такое тип
+// Почему в парсере лучше писать `do _ <- adsf` а не просто  `do asdf`
+// Не забывать спрашивать про CPS
 
 ifdef::backend-docbook[]
 [index]
